--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
     </div>
   </section>
 
+  <!-- 🛍️ Our Products Section -->
+<section class="product-section">
+  <h2>Our Products</h2>
+  <div id="product-list" class="product-grid"></div>
+</section>
+
+  
   <footer>
     <p>&copy; 2025 InternationalBandhan. All rights reserved.</p>
   </footer>
