--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
       </div>
       <div class="tile">
         <a href="details.html?item=combo1">
-          <img src="assets/combo1.jpg" alt="Combo 1">
+          <img src="assets/rakhi2.jpg" alt="Combo 1">
           <h3>Rakhi with Kaju Katli</h3>
         </a>
       </div>
       <div class="tile">
         <a href="details.html?item=combo2">
-          <img src="assets/combo2.jpg" alt="Combo 2">
+          <img src="assets/rakhi1.jpg" alt="Combo 2">
           <h3>Rakhi + Dry Fruits</h3>
         </a>
       </div>
