--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,9 @@
     <h1>International Bandhan</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="cart.html">Cart</a>
+      <a href="cart.html">Cart>
+ 🛒 Cart (<span id="cart-count">0</span>)
+</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
