--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>🌍 InternationalBandhan</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="cart.html">Cart>
+      <a href="cart.html">
  🛒 Cart (<span id="cart-count">0</span>)
       </a>
       <a href="checkout.html">Checkout</a>
