--- a/cart.html
+++ b/cart.html
@@ -47,6 +47,6 @@
     <p>&copy; 2025 InternationalBandhan</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script src="js/cart.js"></script>
 </body>
 </html>
